--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Primera Prueba</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
@@ -11,7 +11,7 @@
     <!--Menú-->
     <nav class="navbar navbar-expand-sm bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Mar'Sc</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -42,15 +42,18 @@
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active" style="max-height: 700px;">
-      <img src="img/slider-1.jpg" class="d-block w-100" alt="...">
+    <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/slider-1.jpg" class="d-block w-100" 
+           style="height: 700px; object-fit: cover;" alt="...">
     </div>
-    <div class="carousel-item" style="max-height: 700px;">
-      <img src="img/slider-2.jpg" class="d-block w-100" alt="...">
+    <div class="carousel-item">
+      <img src="img/slider-3.jpg" class="d-block w-100" 
+           style="height: 700px; object-fit: cover;" alt="...">
     </div>
-    <div class="carousel-item" style="max-height: 700px;">
-      <img src="img/slider-3.jpg" class="d-block w-100" alt="...">
+    <div class="carousel-item">
+      <img src="img/slider-2.jpg" class="d-block w-100" 
+           style="height: 700px; object-fit: cover;" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -61,8 +64,7 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
-</div>
-
+ </div>
 
       <!--Tarjetas-->
 
@@ -72,7 +74,7 @@
                 <div class="card border-0 ">
                     <img src="img/card-1.jpg" class="card-img-top rounded-circle" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">CURSOS GRATIS</h5>
+                      <h5 class="card-title">CURSO GRATIS DE JAVA</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="btn btn-primary">CERTIFICATE</a>
                     </div>
@@ -82,7 +84,7 @@
                 <div class="card border-0 ">
                     <img src="img/card-2.jpg" class="card-img-top rounded-circle" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">CURSOS GRATIS</h5>
+                      <h5 class="card-title">CURSO GRATIS DE DESARROLLO WEB</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="btn btn-primary">CERTIFICATE</a>
                     </div>
@@ -92,7 +94,7 @@
                 <div class="card border-0 ">
                     <img src="img/card-3.jpg" class="card-img-top rounded-circle" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">CURSOS GRATIS</h5>
+                      <h5 class="card-title">CURSO GRATIS DE PYTHON</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="btn btn-primary">CERTIFICATE</a>
                     </div>
@@ -107,13 +109,13 @@
         <div class="card mb-3 border-0">
             <div class="row g-0">
               <div class="col-md-5">
-                <img src="img/slider-3.jpg" class="img-fluid rounded-start" alt="...">
+                <img src="img/powebi.jpg" class="img-fluid rounded-start" alt="...">
               </div>
               <div class="col-md-7">
                 <div class="card-body">
-                  <h2 class="card-title">CURSOS GRATIS</h2>
+                  <h2 class="card-title">CURSOS GRATIS DE POWER BI</h2>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim iste, obcaecati quidem quas tempora impedit. Rem, minus dolorum perferendis corporis atque nesciunt accusamus dolores provident illo cupiditate autem ipsum dignissimos!</p>
-                  <div class="text-center"><a href="#" class="btn btn-success btn-lg">CERTIFICATE</a></div>
+                  <div class="text-center"><a href="#" class="btn btn-primary btn-lg">CERTIFICATE</a></div>
                 </div>
               </div>
             </div>
@@ -126,13 +128,13 @@
           
               <div class="col-md-7 order-2">
                 <div class="card-body">
-                  <h2 class="card-title">CURSOS GRATIS</h2>
+                  <h2 class="card-title">CURSO GRATIS DE REACT</h2>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim iste, obcaecati quidem quas tempora impedit. Rem, minus dolorum perferendis corporis atque nesciunt accusamus dolores provident illo cupiditate autem ipsum dignissimos!</p>
-                  <div class="text-center"><a href="#" class="btn btn-success btn-lg">CERTIFICATE</a></div>
+                  <div class="text-center"><a href="#" class="btn btn-primary btn-lg">CERTIFICATE</a></div>
               </div>
               </div>
               <div class="col-md-5 order-1">
-                <img src="img/slider-2.jpg" class="img-fluid rounded-start" alt="...">
+                <img src="img/react.jpg" class="img-fluid rounded-start" alt="...">
               </div>
 
             </div>
@@ -142,10 +144,10 @@
       <footer>
         <div class="container-fluid bg-dark p-5 text-center">
             <div class="row">
-                <div class="col"><a href="#" class="text-decoration-none text-success"><i class="bi bi-facebook"></i> CURSOS</a></div>
-                <div class="col"><a href="#" class="text-decoration-none text-success">TUTORIALES</a></div>
-                <div class="col"><a href="#" class="text-decoration-none text-success">DESCARGAS</a></div>
-                <div class="col"><a href="#" class="text-decoration-none text-success">CONTACTO</a></div>
+                <div class="col"><a href="#" class="text-decoration-none text-primary"><i class="bi bi-facebook"></i> CURSOS</a></div>
+                <div class="col"><a href="#" class="text-decoration-none text-primary"></i>TUTORIALES</a></div>
+                <div class="col"><a href="#" class="text-decoration-none text-primary"><i class="bi bi-arrow-down-circle"></i> DESCARGAS</a></div>
+                <div class="col"><a href="#" class="text-decoration-none text-primary">CONTACTO</a></div>
             </div>
         </div>
       </footer>
