--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
   </div>
     <div class="carousel-inner">
     <div class="carousel-item active">
+      <img src="img/prii1.jpg" class="d-block w-100" 
+           style="height: 700px; object-fit: cover;" alt="...">
+    </div>
+    <div class="carousel-item">
       <img src="img/slider-1.jpg" class="d-block w-100" 
            style="height: 700px; object-fit: cover;" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/slider-3.jpg" class="d-block w-100" 
-           style="height: 700px; object-fit: cover;" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/slider-2.jpg" class="d-block w-100" 
+      <img src="img/imgp2.jpg" class="d-block w-100" 
            style="height: 700px; object-fit: cover;" alt="...">
     </div>
   </div>
@@ -72,7 +72,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card border-0 ">
-                    <img src="img/card-1.jpg" class="card-img-top rounded-circle" alt="...">
+                    <img src="img/prii2.jpg" class="card-img-top rounded-circle" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">CURSO GRATIS DE JAVA</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -82,9 +82,9 @@
             </div>
             <div class="col-md-4">
                 <div class="card border-0 ">
-                    <img src="img/card-2.jpg" class="card-img-top rounded-circle" alt="...">
+                    <img src="img/imgg.jpg" class="card-img-top rounded-circle" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">CURSO GRATIS DE DESARROLLO WEB</h5>
+                      <h5 class="card-title">CURSO DE DESARROLLO WEB</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="btn btn-primary">CERTIFICATE</a>
                     </div>
@@ -92,7 +92,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card border-0 ">
-                    <img src="img/card-3.jpg" class="card-img-top rounded-circle" alt="...">
+                    <img src="img/imgg2.jpg" class="card-img-top rounded-circle" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">CURSO GRATIS DE PYTHON</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
